--- a/igor/login_reg/templates/index.html
+++ b/igor/login_reg/templates/index.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Black Han Sans' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Blinker' rel='stylesheet'>
     <title>Login Registration</title>
     {%load static%}
     <link rel="stylesheet" href="{% static 'css/login.css'%}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
-    <div id="container">
+    <div class="container-fluid">
+        <div class="jumbotron text-center">
+            <h1>Welcome to Igor</h1>
+            <h2>The General Q&A Assistant for the Average Person</h2>
+        </div>
         {% if messages %}
         <ul class="messages">    
             {% for message in messages %}    
@@ -16,25 +25,46 @@
             {% endfor %}
         </ul>
         {% endif %}
-        <form action="/register" method="POST">
-            <h2>REGISTER</h2>
-            {%csrf_token%}
-            User Name:<input type="text" name="username">
-            Email:<input type="email" name="email">
-
-            Password:<input type="password" name="password">
-            Confirm:<input type="password" name="confirm_password">
-            <input type="submit" value="Register!">
-        </form>
-
-        <form action="/login" method="post">
-            <h2>LOGIN</h2>
-            {%csrf_token%}
-            Email: <input type="text" name="login_uname">
-            Password: <input type="password" name="login_pass">
-            <input type="submit" value="Login">
-        </form>
-
+        <div class="col-lg-11" id="main_content">
+            <div class="col-lg-6" id="register">
+                <form action="/register" method="POST">
+                    <h2>REGISTER</h2>
+                    {%csrf_token%}
+                    <div class="form-group">
+                        <label for="username">User Name:</label>
+                        <input type="text" name="username" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="email" name="email" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password:</label>
+                        <input type="password" name="password" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="confirm">Confirm Password:</label>
+                        <input type="password" name="confirm_password" class="form-control">
+                    </div>
+                    <button type="submit" class="btn btn-default">Register!</button> 
+                </form>
+            </div>
+            <div class="col-lg-6" id="login">
+                <form action="/login" method="post">
+                    <h2>LOGIN</h2>
+                    {%csrf_token%}
+                    <div class="form-group">
+                        <label for="login_email">Email:</label>
+                        <input type="text" name="login_uname" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="login_password">Password:</label>
+                        <input type="password" name="login_pass" class="form-control">
+                    </div>
+                    <button type="submit" class="btn btn-default">Register!</button> 
+                </form>
+            </div>
+        </div>
     </div>
     
 </body>
