--- a/igor/igor_app/templates/mypage.html
+++ b/igor/igor_app/templates/mypage.html
@@ -16,6 +16,9 @@
     <div class="container-fluid">
         <div class="jumbotron text-center">
             <h1>Igor</h1>
-            <h2>Hello Chet. What Would You Like to Ask Today></h2>
+            <a href="/logout">Log Out</a>
+            <a href="about">About Igor</a>
+            <a href="questions">Want_Ad</a>
+            <h2>Hello {{ user.username }}. What Would You Like to Ask Today></h2>
         </div>
     </div>
