populated with basic info for now

--- a/igor/igor_app/templates/about.html
+++ b/igor/igor_app/templates/about.html
@@ -16,6 +16,28 @@
     <div class="container-fluid">
         <div class="jumbotron text-center">
             <h1>About Igor</h1>
+            <div>
+                <p>
+                    Igor is a simple question ad answer application for the average person.
+                    It is not a highly specialized Q&A forum but a simple community driven site for people to post questions and easily find their answers.
+                </p>
+                <p>
+                    What is a specialty?
+                    Specialty is a field in which an individual is especially knowledgable in. In context of questions, specialty is the area of knowledge best suited for the question.
+                </p>
+                <p>
+                        Why is specialty important?
+                        Ideally, one would ask a question and hope to get an answer from one who has good knowledgem or a specialty, in context of that question.
+                    Example being, a question posted about cars would be best answered by a person with a specialty in cars.
+                </p>
+                <p>
+                    Why Igor?
+                    At at times it can be intimidating to search the web and read through overwhelming amounts of results to potentially get nothing from it. Sometimes even wrong information you may have thought was correct.
+                    With Igor, you can simply post a question then have a friendly Igor community member give a nudge in the right direction with a brief answer and a link to a reliable resource.
+                    Almost as if to have a friend or assistant by your side you can rattle off questions to.
+                    One of the great things about Igor is that it will remember if you've asked those questions and keep a list so you can easily reference answers in the future.
+                </p>
+            </div>
         </div>
     </div>
 </body>
