--- a/igor/login_reg/templates/index.html
+++ b/igor/login_reg/templates/index.html
@@ -21,6 +21,16 @@
                         <input type="text" name="username" class="form-control">
                     </div>
                     <div class="form-group">
+                        <select name="specialty" size="1">
+                            <option>Choose...</option>
+                            <option value="food">Food</option>
+                            <option value="cars">Cars</option>
+                            <option value="clothes">Clothes</option>
+                            <option value="computer">Computer</option>
+                            <option value="health">Health</option>
+                        </select>   
+                    </div>
+                    <div class="form-group">
                         <label for="email">Email:</label>
                         <input type="email" name="email" class="form-control">
                     </div>
