--- a/igor/igor_app/templates/want_ad.html
+++ b/igor/igor_app/templates/want_ad.html
@@ -13,5 +13,23 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
+    <div class="container-fluid">
+        <div class="jumbotron text-center">
+            <a href="/igor/"><h1>Igor</h1></a>
+            <a href="/logout">Log Out</a>
+            <a href="about">About Igor</a>
+            <a href="questions">Want_Ad</a>
+            <h2>Hello {{ user.username }}.</h2>
+            {%for question in questions%}
+                <div>
+                    <h4>{{question.content}}</h4>
+                    <h5>{{question.user_who_posted.username}}</h5>
+                    <h6>{{question.specialty}}</h6>
+                </div>
+                
+            {%endfor%}
+
+        </div>
+    </div>
 </body>
 </html>
