--- a/igor/login_reg/templates/index.html
+++ b/igor/login_reg/templates/index.html
@@ -21,6 +21,7 @@
                         <input type="text" name="username" class="form-control">
                     </div>
                     <div class="form-group">
+                        <label for="specialty">Specialty:</label>
                         <select name="specialty" size="1">
                             <option>Choose...</option>
                             <option value="food">Food</option>
