--- a/igor/igor_app/static/css/mypage.css
+++ b/igor/igor_app/static/css/mypage.css
@@ -7,4 +7,106 @@
 
 .container-fluid{
     background:linear-gradient(#3385ff,#1a75ff,#0052cc,#0047b3);
+    padding-bottom:100px;
 }
+
+#chat{
+    width:50px;
+    height:50px;
+}
+
+table#my_questions.table.table-bordered, .col-lg-6, .col-lg-4{
+    background: linear-gradient(#000000,#001433, #001f4d, #002966);
+}
+
+table#my_questions.table.table-bordered{
+    margin-left:70px;
+}
+
+h1{
+    font-family:'Black Han Sans';
+}
+
+h2, label, td, a{
+    font-family:'Blinker';
+    color:#3385ff;
+}
+
+th{
+    font-family:'Black Han Sans';
+    color:#3385ff;
+    font-weight:normal;
+}
+
+form{
+    color:#001433;
+}
+
+td, a#answer_link{
+    font-size:16pt;
+}
+
+th{
+    font-size:20pt;
+}
+
+img#chat{
+    width:40px;
+    height:40px;
+}
+
+td#answer{
+    text-align:center;
+}
+
+.col-lg-4, .col-lg-6{
+    border:1px solid #ddd;
+    padding: 40px 40px 40px 40px;
+    margin-bottom:30px;
+}
+
+a, p{
+    font-size:24pt;
+}
+
+label{
+    font-size:14pt;
+}
+
+select{
+    width:200px;
+}
+
+form{
+    float:right;
+}
+.col-lg-4{
+    text-align:center;
+    font-family:'Black Han Sans';
+    color:#3385ff;
+    margin-left:100px;
+}
+
+a{
+    color:#d9d9d9;
+}
+
+button{
+    background: linear-gradient(#3385ff,#1a75ff,#0052cc,#0047b3);
+    width:100px;
+    color:#001433;
+    font-family:'Blinker';
+    font-size:14pt;
+    font-weight: bold;
+    padding:5px 5px 5px 5px;
+    margin-left:10px;
+}
+
+.col-lg-6{
+    margin-left:25px;
+    float:right;
+}
+
+
+
+
