--- a/igor/igor_app/static/css/results.css
+++ b/igor/igor_app/static/css/results.css
@@ -7,4 +7,18 @@
 
 .container-fluid{
     background:linear-gradient(#3385ff,#1a75ff,#0052cc,#0047b3);
+    padding-bottom:100px;
+}
+
+a, p{
+    font-size:24pt;
+    font-family:'Blinker';
+}
+
+a{
+    color:#d9d9d9;
+}
+
+h1{
+    font-family:'Black Han Sans';
 }
