--- a/igor/login_reg/static/css/login.css
+++ b/igor/login_reg/static/css/login.css
@@ -6,10 +6,7 @@ form{
 form input{
     display:block;
 }
-#container{
-    width:970px;
 
-}
 .jumbotron{
     background:linear-gradient(#000000,#001433, #001f4d, #002966);
     color:#3385ff;
@@ -18,8 +15,8 @@ form input{
 }
 
 .col-lg-11{
-    float:right;
-    padding-bottom:150px;
+    margin-left:115px;
+
 }
 
 h1{
@@ -45,8 +42,8 @@ label{
 }
 .container-fluid{
     background:linear-gradient(#3385ff,#1a75ff,#0052cc,#0047b3);
+    padding-bottom:100px;
 }
-
 button.btn.btn-default{
     background:linear-gradient(#3385ff,#1a75ff,#0052cc,#0047b3);
     color:#001433;
