--- a/igor/login_reg/templates/index.html
+++ b/igor/login_reg/templates/index.html
@@ -13,6 +13,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
+    <div class="container-fluid">
+        <div class="jumbotron text-center">
+            <h1>Welcome to Igor</h1>
+            <h2>The General Q & A Assistant For the Average Person</h2>
+        </div>
+        <div class="col-lg-11">
+            <div class="col-lg-6">
                 <form action="/register" method="POST">
                     <h2>REGISTER</h2>
                     {%csrf_token%}
