--- a/igor/igor_app/templates/want_ad.html
+++ b/igor/igor_app/templates/want_ad.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
         <div class="jumbotron text-center">
             <h1>Igor: Welcome To the Help Wanted Page</h1>
-            <p id="header"><a href="/logout">Log Out</a> | <a href="/about">About Igor</a> | <a href="/">My Page</a></p></p>
+            <p id="header"><a href="/logout">Log Out</a> | <a href="/igor/about">About Igor</a> | <a href="/">My Page</a></p></p>
         </div>
         <div class="col-lg-11">
             <div class="col-lg-9">
