--- a/igor/igor_app/templates/results.html
+++ b/igor/igor_app/templates/results.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">   
         <div class="jumbotron text-center">
             <h1>Igor: Q & A</h1>
-            <p><a href="/logout">Log Out</a> | <a href="/about">About Igor</a> | <a href="questions">Help Wanted</a> | <a href="/">My Page</a></p>
+            <p><a href="/logout">Log Out</a> | <a href="/igor/about">About Igor</a> | <a href="questions">Help Wanted</a> | <a href="/">My Page</a></p>
         </div>
         <div class="col-lg-11">
            <div class="col-lg-6">
