--- a/igor/login_reg/templates/index.html
+++ b/igor/login_reg/templates/index.html
@@ -65,7 +65,7 @@
                         <label for="login_password">Password:</label>
                         <input type="password" name="login_pass" class="form-control">
                     </div>
-                    <button type="submit" class="btn btn-default">Register!</button> 
+                    <button type="submit" class="btn btn-default">Log In</button>
                 </form>
             </div>
         </div>
