--- a/igor/igor_app/templates/mypage.html
+++ b/igor/igor_app/templates/mypage.html
@@ -20,16 +20,16 @@
         </div>
         <div class="col-lg-11">
             <div class="col-lg-4">
-                <p id="user_info">User-Occupation</p>
+                <p id="user_info">{{ user.username }} - Occupation</p>
                 <img src="{%static 'img/temp_pic.png'%}" id="temp"/>
             </div>
             <br>
             <div class="col-lg-6">
                 <form action="questions/ask/" method="POST">
                     {% csrf_token %}
-                    <label for="question_content" ><h2>Hello, {{ user.username }}. What Would You Like To Ask Today?</h2></label>
+                    <label for="question_content" ><h2>What Would You Like To Ask Today?</h2></label>
                     <br>
-                    <textarea name="question_content" rows="3" cols="80"></textarea>
+                    <textarea name="question_content" rows="3" cols="60"></textarea>
                     <br>
                     <label for="specialty">Specialist needed?:</label>
                     <select name="specialty" size="1">
