got profile form working

--- a/igor/igor_app/templates/mypage.html
+++ b/igor/igor_app/templates/mypage.html
@@ -20,8 +20,8 @@
         </div>
         <div class="col-lg-11">
             <div class="col-lg-4">
-                <p id="user_info">User-Occupation</p>
-                <img src="{%static 'img/temp_pic.png'%}" id="temp"/>
+                <p id="user_info">{{user_profile.occupation}}</p>
+                <img src={{IMG_URL}} id="temp"/>
             </div>
             <br>
             <div class="col-lg-6">
