--- a/igor/igor_app/templates/registration.html
+++ b/igor/igor_app/templates/registration.html
@@ -19,9 +19,9 @@
             <h2>Complete Your Profile</h2>   
         </div>
         <div class="col-lg-11">
-            <form action="/create_profile" method="POST" enctype="multipart/form-data">
+            <form action="/igor/create_profile" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
-            {{profileform.as_p}}
+            {{profile_form.as_p}}
             <input type="submit" value="Complete Profile">
             </form>
         </div>
