adding datatable to Want Ad

--- a/igor/igor_app/templates/want_ad.html
+++ b/igor/igor_app/templates/want_ad.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link href='https://fonts.googleapis.com/css?family=Black Han Sans' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Blinker' rel='stylesheet'>
     <title>Igor-Wanted</title>
-    {%load static%}
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css">
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.js"></script>
+    {% load static %}
     <link rel="stylesheet" href="{% static 'css/want_ad.css'%}">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
     <div class="container-fluid">
@@ -60,10 +62,11 @@
                             <td>{{question.user_who_posted.username}}</td>
                             <td>{{question.specialty}}</td>
                             <td id="answer_question">
-                            <form action="/answer_question" method="post">
+                            <form action="/igor/questions/{{question.id}}/answer" method="post">
                                 {% csrf_token %}
                                     <div class="form-group">
                                         <input class="form-contol" name="content" id="content" type="text">
+                                        <button class="btn btn-primary">Answer</button>
                                     </div>
                             </form></td>
                         </tr>
@@ -76,6 +79,9 @@
     </div>
 <script>
 $(document).ready( function () {
+    $('#all_questions').DataTable();
+} );
+
     $("a").hover(function(){
         $(this).css("color", "#3385ff");
         $(this).css("text-decoration", "none");
