--- a/igor/igor_app/static/css/results.css
+++ b/igor/igor_app/static/css/results.css
@@ -10,7 +10,15 @@
     padding-bottom:100px;
 }
 
-a, p{
+.col-lg-11{
+    text-align:center;
+}
+
+.col-lg-6{
+    margin-left:400px;
+}
+
+a, p#header{
     font-size:24pt;
     font-family:'Blinker';
 }
@@ -24,6 +32,27 @@ h1{
 }
 
 #avatar{
-    width:50px;
-    height:50px;
+    width:25px;
+    height:25px;
 }
+
+h3#question{
+    background:linear-gradient(#000000,#001433, #001f4d, #002966);
+    color: #3385ff;
+    font-family:'Black Han Sans';
+    padding: 20px 20px 20px 20px;
+}
+
+h4, h3{
+    color:#001433;
+    font-family:'Black Han Sans';
+}
+
+p, h4#answer{
+    
+    background:linear-gradient(#000000,#001433, #001f4d, #002966);
+    color: #3385ff;
+    margin-right:50px;
+    font-family: 'Blinker'
+}
+
